Fix overflow issue

--- a/src/app/dashboard-event/dashboard-event.component.scss
+++ b/src/app/dashboard-event/dashboard-event.component.scss
@@ -21,8 +21,8 @@
     text-align: right;
 }
 .active {
-    max-height: 2000px;
-    overflow: visible;
+    max-height: 4000px;
+    overflow: hidden;
     transition: max-height 0.5s ease-in;
 }
 .deactive {
