--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 .active {
-    max-height: 2000px;
-    overflow: visible;
+    max-height: 4000px;
+    overflow: hidden;
     transition: max-height 0.5s ease-in;
 }
 .deactive {
